--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,32 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <style>
+      .blink {
+        animation: blinker 0.6s linear infinite;
+        color: #410503;
+        font-size: 30px;
+        font-weight: bold;
+        font-family: sans-serif;
+      }
+      @keyframes blinker {
+        50% {
+          opacity: 0;
+        }
+      }
+      .blink-two {
+        animation: blinker-two 1.8s linear infinite;
+      }
+      @keyframes blinker-two {
+        100% {
+          opacity: 0;
+        }
+      }
+    body {
+      background-color: #b15c34;;
+          }
+</style>
+    </style>
   </head>
   <body>
     <div class="container">
@@ -16,9 +42,8 @@
       <div class="jumbotron text-center">
         <h1>Mission to Mars</h1>
         <!-- Add a button to activate scraping script -->
-        <p><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
+        <p class="blink blink-two"><a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape New Data</a></p>
       </div>
-
       <!-- Add section for Mars News -->
       <div class="row" id="mars-news">
         <div class="col-md-12">
@@ -31,20 +56,16 @@
           </div>
         </div>
       </div>
-
       <!-- Section for Featured Image and Facts table -->
       <div class="row" id="mars-featured-image">
         <div class="col-md-8">
           <h2>Featured Mars Image</h2>
-
-          <!-- if images is False/None/non-existent, then default to error message -->
           <img
-            src="{{mars.featured_image | default('static/images/error.png', true) }}"
+            src="{{mars.featured_image }}"
             class="img-responsive"
             alt="Responsive image"
           />
         </div>
-
         <div class="col-md-4">
           <!-- Mars Facts -->
           <div class="row" id="mars-facts">
@@ -53,17 +74,15 @@
           </div>
         </div>
       </div>
-
       <!-- Section for Mars Hemispheres -->
-      <div class="row" id="mars-hemispheres">
-        <div class="page-header">
-          <h2 class="text-center">Mars Hemispheres</h2>
-        </div>
-
+      <div class="row" id="mars_hemispheres">
+        <div class='page-header'>
+          <h2 class='text-center'>Mars Hemispheres</h2>
+        </div> 
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
-          <div class="thumbnail">
-            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
+        <div class="col-md-3">
+          <div class='thumbnail' style='border:rgba(215, 107, 12, 0.783);'>
+            <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="Responsive image" class="img-responsive" >
             <div class="caption">
               <h3>{{hemisphere.title}}</h3>
             </div>
